--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "chex",
-    "slug": "chex",
+    "name": "Chessquilab",
+    "slug": "Chessquilab",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
