--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/picker": "1.6.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@use-expo/font": "^2.0.0",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "firebase": "7.9.0",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
@@ -24,6 +26,7 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-underline-tabbar": "^1.3.6",
     "react-native-web": "~0.11.7"
   },
