--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "1.6.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@ui-kitten/components": "^5.0.0",
     "@use-expo/font": "^2.0.0",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
@@ -27,6 +29,7 @@
     "react-native-screens": "~2.9.0",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-svg": "12.1.0",
     "react-native-underline-tabbar": "^1.3.6",
     "react-native-web": "~0.11.7"
   },
