--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-screens": "~2.9.0",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-smooth-picker": "^1.1.3",
     "react-native-svg": "12.1.0",
     "react-native-underline-tabbar": "^1.3.6",
     "react-native-web": "~0.11.7"
