--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ui-kitten/components": "^5.0.0",
     "@use-expo/font": "^2.0.0",
     "expo": "~38.0.8",
+    "expo-google-app-auth": "^8.1.3",
     "expo-status-bar": "^1.0.2",
     "firebase": "7.9.0",
     "radio-buttons-react-native": "^1.0.4",
@@ -33,7 +34,8 @@
     "react-native-smooth-picker": "^1.1.3",
     "react-native-svg": "12.1.0",
     "react-native-underline-tabbar": "^1.3.6",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-facebook": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
