--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "1.6.0",
     "@react-navigation/native": "^5.7.3",
@@ -16,6 +17,7 @@
     "@ui-kitten/components": "^5.0.0",
     "@use-expo/font": "^2.0.0",
     "expo": "~38.0.8",
+    "expo-facebook": "~8.2.1",
     "expo-google-app-auth": "^8.1.3",
     "expo-status-bar": "^1.0.2",
     "firebase": "7.9.0",
@@ -25,6 +27,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-indicator": "^1.2.2",
     "react-native-popover-view": "^3.0.3",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
@@ -34,8 +37,7 @@
     "react-native-smooth-picker": "^1.1.3",
     "react-native-svg": "12.1.0",
     "react-native-underline-tabbar": "^1.3.6",
-    "react-native-web": "~0.11.7",
-    "expo-facebook": "~8.2.1"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
