--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-smooth-picker": "^1.1.3",
     "react-native-svg": "12.1.0",
+    "react-native-text-ticker": "^1.8.0",
     "react-native-underline-tabbar": "^1.3.6",
     "react-native-web": "~0.11.7"
   },
